Source/WebCore/xml/XMLHttpRequest.h
@@ -205,10 +205,9 @@ private:
 
     bool m_error { false };
 
-    bool m_uploadEventsAllowed { true };
+    bool m_uploadListenerFlag { false };
     bool m_uploadComplete { false };
 
-    bool m_sameOriginRequest { true };
     bool m_wasAbortedByClient { false };
 
     // Used for progress event tracking.
